v2.2.3
----------------------------------------------------------------------------------------------------
 * Configuring MDCAChallenges replaces any previous existing challenge configuration. It
   had been additive before which was not the intended behaviour. [@mkauf]
 * Fixing order of ACME challenges used when nothing else configured. Code now behaves as
   documented for `MDCAChallenges`. Fixes #156. Thanks again to @mkauf for finding this.
 * Added a script - inspired by curl <https://github.com/curl> - that collects contributors
   from the git commits and PRs. Adding a "Thanks" section with their names in the README.md.

v2.2.2
----------------------------------------------------------------------------------------------------
 * Fixing a potential, low memory null pointer dereference [thanks to @uhliarik].
 * Fixing an incompatibility with a change in libcurl v7.66.0 that added unwanted
   "transfer-encoding" to POST requests. This failed in directy communication with
   Let's Encrypt boulder server (however it worked when accessed via the hosting CDN,
   as almost all live usages do). Thanks to @mkauf for finding and fixing.
 
v2.2.1
----------------------------------------------------------------------------------------------------
 * Fixes a compiler warning. False flag, but initialization to make it happy does not hurt.
   Thanks to @sundayoyeniyi for finding this. Refs #154.

v2.2.0
----------------------------------------------------------------------------------------------------
 * No longer beta status.
 * Synched with Apache trunk and planned for 2.4.x backport when all works well there.
 * Re-importing of log tags assigned in Apache project.
 * Some documentation clarifications.

v2.1.10
----------------------------------------------------------------------------------------------------
 * if 'MDBaseServer' in enabled and there is no specific VirtualHost for a domain, the