@@ -27,6 +27,7 @@
 		B212737423290E5B00BB7C30 /* TestCertUtil.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = TestCertUtil.py; sourceTree = "<group>"; };
 		B2127375232F978C00BB7C30 /* buildconf */ = {isa = PBXFileReference; lastKnownFileType = text; path = buildconf; sourceTree = SOURCE_ROOT; };
 		B2127376232FA16500BB7C30 /* Dockerfile */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = Dockerfile; sourceTree = SOURCE_ROOT; };
+		B228A49323742DE600000CB2 /* md_message.sh */ = {isa = PBXFileReference; lastKnownFileType = text.script.sh; path = md_message.sh; sourceTree = "<group>"; };
 		B2307ED520E2562100487AD7 /* test.ini */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = test.ini; sourceTree = "<group>"; };
 		B2334BB223702B810007C6CE /* contributors.sh */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.script.sh; path = contributors.sh; sourceTree = "<group>"; };
 		B23C47E722F1A45900B8F494 /* test_0740_acme_errors.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_0740_acme_errors.py; sourceTree = "<group>"; };
@@ -185,6 +186,7 @@
 			isa = PBXGroup;
 			children = (
 				B2334BB223702B810007C6CE /* contributors.sh */,
+				B228A49323742DE600000CB2 /* md_message.sh */,
 			);
 			path = scripts;
 			sourceTree = SOURCE_ROOT;
